@startuml Week8_Command_Pattern

skinparam classAttributeIconSize 0

package "Command Pattern" {
    class Client <<demo>> {
        +main(String[])
    }
    
    class PosRemote <<invoker>> {
        -Command[] slots
        -Deque<Command> history
        +setSlot(int, Command)
        +press(int)
        +undo()
    }
    
    interface Command {
        +execute()
        +undo() : default
    }
    
    class AddItemCommand <<concrete command>> {
        -OrderService service
        -String recipe
        -int qty
        +execute()
        +undo()
    }
    
    class PayOrderCommand <<concrete command>> {
        -OrderService service
        -PaymentStrategy strategy
        -int taxPercent
        +execute()
    }
    
    class MacroCommand <<concrete command>> {
        -Command[] steps
        +execute()
        +undo()
    }
    
    class OrderService <<receiver>> {
        -ProductFactory factory
        -Order order
        +addItem(String, int)
        +removeLastItem()
        +pay(PaymentStrategy, int)
        +totalWithTax(int) : Money
    }
    
    class Order <<domain>> {
        -long id
        -List<LineItem> items
        +addItem(LineItem)
        +totalWithTax(int) : Money
    }
    
    Client --> PosRemote : creates
    Client --> AddItemCommand : creates
    Client --> PayOrderCommand : creates
    
    PosRemote --> Command : uses
    PosRemote ..> Command : stores in slots
    
    Command <|.. AddItemCommand
    Command <|.. PayOrderCommand
    Command <|.. MacroCommand
    
    AddItemCommand --> OrderService : calls
    PayOrderCommand --> OrderService : calls
    MacroCommand --> Command : aggregates
    
    OrderService --> Order : modifies
    
    note right of PosRemote
        <b>Invoker</b>
        - Decouples button presses
          from business logic
        - Supports undo history
        - Can execute any command
    end note
    
    note right of Command
        <b>Command Interface</b>
        - Encapsulates request
        - Supports undo operation
    end note
    
    note right of OrderService
        <b>Receiver</b>
        - Contains business logic
        - Performs actual operations
        - Domain model operations
    end note

}

@enduml


